put all connections that are assigned to ShardConnection into sharded state immediately on creation SERVER-2828